new logic to remove acceleration marks

Logic to remove acceleration marks borrowed from KWidgetAddons
https://phabricator.kde.org/D7964
This should handle as wel CJK text.
BUG:420409